k8s/services/lemmy/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lemmy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: lemmy
  hostnames:
    - lemmy.lama-corp.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /pictrs
        - path:
            type: PathPrefix
            value: /feeds
        - path:
            type: PathPrefix
            value: /nodeinfo
        - path:
            type: PathPrefix
            value: /.well-known
        - headers:
            - type: Exact
              name: Accept
              value: "application/activity+json"
        - headers:
            - type: Exact
              name: Accept
              value: "application/ld+json"
        - method: POST
        - method: PUT
        - method: PATCH
        - method: DELETE
      backendRefs:
        - name: lemmy
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Frame-Options
                value: SAMEORIGIN
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-XSS-Protection
                value: "1; mode=block"
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lemmy-ui
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Frame-Options
                value: SAMEORIGIN
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-XSS-Protection
                value: "1; mode=block"
